add back permgen sizes which are needed on grid